# bioinformatics-archive-warehouse

./: readme.md
DBG-graph-theory/: .gitignore  DBG_New.sln  DBG_New.vcxproj  DBG_New.vcxproj.filters  IO.cpp  IO.h  Node.cpp  Node.h  README.md  StorageInterface.cpp  StorageInterface.h  bplus.cpp  bplus.h  dll.cpp  dll.h  main.cpp  navigate.cpp  navigate.h  navigate2.cpp  navigate2.h  operate.cpp  operate.h  public.h  searcher.cpp  searcher.h
DBG-rough-sort/DBG_RoughSort-main/DBG_RoughSort-main/: 0.txt  DBG_RoughSort.sln  DBG_RoughSort.vcxproj  DBG_RoughSort.vcxproj.filters  IO.cpp  IO.h  PublicHeader.h  main.cpp  merge.txt  quickSort.txt  thread.cpp  thread.h
ID-washing/: ID-wash.cpp  ID-wash.h  ID.cpp  README.md  main-settings.h
dna-scontig-v1/: CMakeLists.txt  README
dna-scontig-v1/cmake/: fmt-8.1.1.cmake
dna-scontig-v1/include/contig/: io.h  storage.h  types.h
dna-scontig-v1/include/engine/: output.h  scontig.h  stage1.h  stage2.h  types.h  utils.h
dna-scontig-v1/include/idx/: idx.h  parser.h  tree.h
dna-scontig-v1/include/reads/: io.h  match.h  merge.h  types.h
dna-scontig-v1/src/: CMakeLists.txt
dna-scontig-v1/src/contig/: CMakeLists.txt  io.cpp  stroage.cpp
dna-scontig-v1/src/engine/: CMakeLists.txt  output.cpp  scontig.cpp  stage1.cpp  stage2.cpp  utils.cpp
dna-scontig-v1/src/idx/: CMakeLists.txt  parser.cpp
dna-scontig-v1/src/reads/: CMakeLists.txt  io.cpp  match.cpp  merge.cpp
dna-scontig-v1/test/: CMakeLists.txt  test_match.cpp  test_tree.cpp
docking-table/: DockingTableRelease.sln  README.md
docking-table/DockingTable/: DockingTable.vcxproj  DockingTable.vcxproj.filters  cpp.hint  main.cpp
docking-table/DockingTable/dll/: dll.cpp  dll.h
docking-table/DockingTable/include/: Settings.h
eigenvalue-calculation/: CMakeLists.txt  README.md  main.cpp
eigenvalue-calculation/include/: IO.h  settings.h
eigenvalue-calculation/lib/: eigenmatrix.cpp
eigenvalue-calculation/src/: ComputingCore.cpp  IO.cpp  SequenceUnit.cpp
generate-tables-different-inputs/next-generation-sequencing-1/: .gitignore  next-generation-sequencing-1.sln
generate-tables-different-inputs/next-generation-sequencing-1/next-generation-sequencing-1/: main-settings.h  main.cpp  next-generation-sequencing-1.vcxproj  next-generation-sequencing-1.vcxproj.filters  resource.h
generate-tables-different-inputs/next-generation-sequencing-2/: next-generation-sequencing-2.sln
generate-tables-different-inputs/next-generation-sequencing-2/next-generation-sequencing-2/: next-generation-sequencing-2.vcxproj  (+1 more)
generate-tables-different-inputs/sequencing-preprocessing/: CMakeLists.txt  g-shell.sh
generate-tables-different-inputs/sequencing-preprocessing-2/: cl-shell.bat  log.txt
generate-tables-different-inputs/sequencing-preprocessing-3/: README.md
generate-tables-different-inputs/sequencing-preprocessing/include/: exception-handling.h
generate-tables-different-inputs/sequencing-preprocessing/src/: main.cpp  settings.h
generate-tables-different-inputs/sequencing-preprocessing/src/IO/: IO.cpp  IO.h
generate-tables-different-inputs/sequencing-preprocessing/src/class/sequencing/: sequencing.cpp
sample-extraction/: CMakeLists.txt  README.md
sample-extraction/include/: goble_settings.h  program_options.h
sample-extraction/src/: goble_settings.cpp  main.cpp  program_options.cpp
(+73 files in other folders)
